[gd_scene load_steps=31 format=2]

[ext_resource path="res://ressources/imgs/player_ui/bg_life_bar.png" type="Texture" id=1]
[ext_resource path="res://ressources/imgs/player_ui/fill_life_bar.png" type="Texture" id=2]
[ext_resource path="res://fonts/ja-jp.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://game/player/player_ui.gd" type="Script" id=4]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_store.png" type="Texture" id=5]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_quests.png" type="Texture" id=6]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_inv.png" type="Texture" id=7]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_persos.png" type="Texture" id=8]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_map.png" type="Texture" id=9]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_help.png" type="Texture" id=10]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_web.png" type="Texture" id=11]
[ext_resource path="res://ressources/imgs/player_ui/circle.png" type="Texture" id=12]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_quests_hover.png" type="Texture" id=13]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_web_hover.png" type="Texture" id=14]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_web_pressed.png" type="Texture" id=15]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_quests_pressed.png" type="Texture" id=16]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_store_hover.png" type="Texture" id=17]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_persos_hover.png" type="Texture" id=18]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_perso_pressed.png" type="Texture" id=19]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_store_pressed.png" type="Texture" id=20]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_map_hover.png" type="Texture" id=21]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_help_pressed.png" type="Texture" id=22]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_inv_hover.png" type="Texture" id=23]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_help_hover.png" type="Texture" id=24]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_inv_pressed.png" type="Texture" id=25]
[ext_resource path="res://ressources/imgs/player_ui/bt_m_map_pressed.png" type="Texture" id=26]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[node name="player_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="in_game" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life" type="TextureProgress" parent="in_game"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 20.0
margin_right = 350.0
margin_bottom = 60.0
rect_scale = Vector2( 0.8, 0.8 )
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="in_game/life"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" type="Control" parent="."]
anchor_left = 0.00259695
anchor_top = -0.00153893
anchor_right = 1.0026
anchor_bottom = 0.998461
__meta__ = {
"_edit_use_anchors_": false
}

[node name="side_panel" type="Control" parent="pause_menu"]
anchor_bottom = 1.0
margin_right = 531.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="pause_menu/side_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VBoxContainer" parent="pause_menu/side_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="HSplitContainer" parent="pause_menu/side_panel/VSplitContainer"]
margin_top = 48.0
margin_right = 511.0
margin_bottom = 148.0
split_offset = 75

[node name="VBoxContainer" type="HBoxContainer" parent="pause_menu/side_panel/VSplitContainer/Control"]
margin_right = 253.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="pause_menu/side_panel/VSplitContainer/Control/VBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 12 )

[node name="name" type="Label" parent="pause_menu/side_panel/VSplitContainer/Control/VBoxContainer"]
margin_left = 104.0
margin_top = 36.0
margin_right = 178.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="pause_menu/side_panel/VSplitContainer/Control"]
margin_left = 265.0
margin_right = 511.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="pause_menu/side_panel/VSplitContainer/Control/VBoxContainer2"]
margin_right = 246.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "niveau : 1"

[node name="Label2" type="Label" parent="pause_menu/side_panel/VSplitContainer/Control/VBoxContainer2"]
margin_top = 24.0
margin_right = 246.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "niveau de monde : 1"

[node name="GridContainer" type="GridContainer" parent="pause_menu/side_panel/VSplitContainer"]
margin_top = 152.0
margin_right = 511.0
margin_bottom = 610.0
columns = 3

[node name="Bt_store" type="TextureButton" parent="pause_menu/side_panel/VSplitContainer/GridContainer"]
margin_right = 150.0
margin_bottom = 150.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 17 )

[node name="Bt_perso" type="TextureButton" parent="pause_menu/side_panel/VSplitContainer/GridContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="Bt_inv" type="TextureButton" parent="pause_menu/side_panel/VSplitContainer/GridContainer"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 150.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 23 )

[node name="Bt_quest" type="TextureButton" parent="pause_menu/side_panel/VSplitContainer/GridContainer"]
margin_top = 154.0
margin_right = 150.0
margin_bottom = 304.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 13 )

[node name="Bt_map" type="TextureButton" parent="pause_menu/side_panel/VSplitContainer/GridContainer"]
margin_left = 154.0
margin_top = 154.0
margin_right = 304.0
margin_bottom = 304.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 21 )

[node name="Bt_web" type="TextureButton" parent="pause_menu/side_panel/VSplitContainer/GridContainer"]
margin_left = 308.0
margin_top = 154.0
margin_right = 458.0
margin_bottom = 304.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 14 )

[node name="Bt_help" type="TextureButton" parent="pause_menu/side_panel/VSplitContainer/GridContainer"]
margin_top = 308.0
margin_right = 150.0
margin_bottom = 458.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 24 )

[node name="HBoxContainer" type="HBoxContainer" parent="pause_menu/side_panel/VSplitContainer"]
margin_top = 614.0
margin_right = 511.0
margin_bottom = 651.0

[node name="bt_quit" type="Button" parent="pause_menu/side_panel/VSplitContainer/HBoxContainer"]
margin_right = 102.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 4 )
text = "quitter"

[node name="bt_main_menu" type="Button" parent="pause_menu/side_panel/VSplitContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 208.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 4 )
text = "quitter"
[connection signal="pressed" from="pause_menu/side_panel/VSplitContainer/GridContainer/Bt_store" to="." method="_on_Bt_store_pressed"]
[connection signal="pressed" from="pause_menu/side_panel/VSplitContainer/GridContainer/Bt_perso" to="." method="_on_Bt_perso_pressed"]
[connection signal="pressed" from="pause_menu/side_panel/VSplitContainer/GridContainer/Bt_inv" to="." method="_on_Bt_inv_pressed"]
[connection signal="pressed" from="pause_menu/side_panel/VSplitContainer/GridContainer/Bt_quest" to="." method="_on_Bt_quest_pressed"]
[connection signal="pressed" from="pause_menu/side_panel/VSplitContainer/GridContainer/Bt_map" to="." method="_on_Bt_map_pressed"]
[connection signal="pressed" from="pause_menu/side_panel/VSplitContainer/GridContainer/Bt_web" to="." method="_on_Bt_web_pressed"]
[connection signal="pressed" from="pause_menu/side_panel/VSplitContainer/GridContainer/Bt_help" to="." method="_on_Bt_help_pressed"]
[connection signal="pressed" from="pause_menu/side_panel/VSplitContainer/HBoxContainer/bt_quit" to="." method="_on_bt_quit_pressed"]
[connection signal="pressed" from="pause_menu/side_panel/VSplitContainer/HBoxContainer/bt_main_menu" to="." method="_on_bt_main_menu_pressed"]
